<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.detail.DetailMoviesActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivPoster"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/poster_infinity_war" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>

            <TextView
                style="@style/Text.Title"
                android:layout_marginTop="16dp"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/tvDes"
                android:gravity="left"
                android:textColor="@color/colorTertiary"
                style="@style/Text"
                android:layout_marginTop="10dp"
                tools:text="@tools:sample/lorem/random" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>